# cnb-cli-rs

./: .cnb.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  WORKFLOW_DESIGN.md  build.rs  cliff.toml  deny.toml  lefthook.yml
crates/cnb-chat/: Cargo.toml  SKILL.md  build.rs
crates/cnb-chat/references/activities/: getuseractivitiesbydate.md  getuserrepoactivitydetails.md  topcontributors.md
crates/cnb-chat/references/ai/: aiautopr.md  aichatcompletions.md
crates/cnb-chat/references/assets/: deleteasset.md  listassets.md
crates/cnb-chat/references/badge/: getbadge.md  listbadge.md  uploadbadge.md
crates/cnb-chat/references/charge/: getspecialamount.md
crates/cnb-chat/references/event/: getevents.md
crates/cnb-chat/references/followers/: getfollowersbyuserid.md  getfollowingbyuserid.md
crates/cnb-chat/references/git/: createblob.md  createbranch.md  createbranchlock.md  createtag.md  deletebranch.md  deletebranchlock.md  deletecommitannotation.md  deletecommitasset.md  deletetag.md  deletetagannotation.md  getarchive.md  getarchivecommitchangedfiles.md  getarchivecomparechangedfiles.md  getbranch.md  getcommit.md  getcommitannotations.md  getcommitannotationsinbatch.md  getcommitassets.md  getcommitassetsbysha.md  getcommitstatuses.md  getcomparecommits.md  getcontent.md  getcontentwithoutpath.md  gethead.md  getpresignedlfsdownloadlink.md  getraw.md  gettag.md  gettagannotations.md  listbranches.md  listcommits.md  listtags.md  postcommitassetuploadconfirmation.md  (+3 more)
crates/cnb-chat/src/: action.rs  curl.rs  docs.rs  lib.rs  prompt.rs
(+596 files in other folders)
